// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches primary (default) type snapshot 1`] = `
<button
  className="px-4 py-2 text-white bg-green-700 hover:bg-green-800"
>
  Primary
</button>
`;

exports[`Button matches secondary type snapshot 1`] = `
<button
  className="px-4 py-2 text-white bg-blue-700 hover:bg-blue-800"
>
  Secondary
</button>
`;

exports[`Button renders with external className as object 1`] = `
<button
  className="px-4 py-2 text-white bg-green-700 hover:bg-green-800 external-classname-true"
>
  Hello
</button>
`;

exports[`Button renders with external className as string 1`] = `
<button
  className="px-4 py-2 text-white bg-green-700 hover:bg-green-800 external-classname"
>
  Hello
</button>
`;
